Theme: Minor fix to spacing of search form in top header for anonymous.

--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -543,7 +543,7 @@ a.telephone:before,
 
 @media (min-width: 601px) {
   .region-secondary-menu .block.search-block-form input {
-    margin: 5px;
+    margin: 6px 5px 6px 0;
   }
 }
 @media (min-width: 851px) {
