--- a/web/themes/custom/breema2/sass/regions/_header.scss
+++ b/web/themes/custom/breema2/sass/regions/_header.scss
@@ -38,7 +38,7 @@
   .region-secondary-menu {
     .block.search-block-form {
       input {
-        margin: 5px;
+        margin: 6px 5px 6px 0;
       }
     }
   }
